Yaka.jj
/*
 *
 *       Auteur: Pedrono Marie-Jo
 *
 * 	création : 13 février 2002
 *
 *     nature : projet etudiant
 *
 */


options{
	JDK_VERSION="1.7";
	OUTPUT_DIRECTORY="src";
}

PARSER_BEGIN(Yaka)

public class Yaka {
  	static YVM yvm;
    static TabIdent tabIdent;
    static Expression expression;
    static Declaration declaration;
  
  public static void main(String args[]) { 
    Yaka analyseur;
    java.io.InputStream input;
    
    if (args.length==1) {
      System.out.print(args[args.length-1] + ": ");
      try {
        input = new java.io.FileInputStream(args[args.length-1]+".yaka");
      } catch (java.io.FileNotFoundException e) {
        System.out.println("Fichier introuvable.");
        return;
      }
    } else if (args.length==0) {
      System.out.println("Lecture sur l'entree standard...");
      input = System.in;
    } else {
      System.out.println("Usage: java Yaka [fichier]");
      return;
    }
    try {
   	  /* Build objet */
      yvm = null; /* will be init later */
      tabIdent = new TabIdent();
      expression = null; /* will be init later */
      declaration = new Declaration();
      
      analyseur = new Yaka(input);
      analyseur.analyse();
      System.out.println("Analyse syntaxique réussie!");
    } catch (ParseException e) {
      String msg = e.getMessage();
      msg = msg.substring(0,msg.indexOf("\n"));
      System.out.println("Erreur de syntaxe : "+msg);
    }
  } 
}

PARSER_END(Yaka)

/***************************************/
/********** TOKEN DEFINITIONS **********/
/***************************************/

TOKEN_MGR_DECLS :
{public static String identLu ,chaineLue;
 public static int entierLu;}

/*** Skip whitespace and comments ***/
SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| "(*"   : IN_COMMENT
}
<IN_COMMENT> MORE:
{
  < ~[] >
}
<IN_COMMENT> SKIP:
{
   < "*)" >  {SwitchTo(DEFAULT);} 
}


/* Mots réservés*/

TOKEN :
{
  < BOOLEEN: "BOOLEEN" >
| < VAR: "VAR" >
| < FAIRE: "FAIRE" >
| < SINON: "SINON" >
| < POUR: "POUR" >
| < SI: "SI" >
| < FSI: "FSI">
| < ENTIER: "ENTIER" >
| < RETOURNE: "RETOURNE" >
| < VRAI: "VRAI" >
| < TANTQUE: "TANTQUE" >
| <CONST : "CONST">
| <FAUX : "FAUX">
| <FAIT : "FAIT">
| <OU : "OU">
| <ET : "ET">
| <NON : "NON">
| <FONCTION : "FONCTION">
| <FFONCTION  : "FFONCTION">
| <PROGRAMME : "PROGRAMME" >
| <FPROGRAMME: "FPROGRAMME" >
| <PRINCIPAL : "PRINCIPAL">
| <FPRINCIPAL : "FPRINCIPAL">
| <ALORS : "ALORS">
| <ECRIRE : "ECRIRE">
| <LIRE : "LIRE">
| <ALALIGNE : "ALALIGNE">

}



/*** unites de base nombres, idents,  strings ***/
TOKEN  :
{
  < #chiffre : ["0"-"9"] >
| < entier : (<chiffre>)+ > 
	{ YakaTokenManager.entierLu = Integer.parseInt(image.toString()); }
| < #lettre: ["A"-"Z","a"-"z"] >
| < ident : <lettre> (<lettre> | <chiffre>)* >
	{ YakaTokenManager.identLu =image.toString(); }
| < chaine : "\"" (~["\""])* "\"" | "'" (~["'"])* "'" >
	{ YakaTokenManager.chaineLue = image.toString(); }
}


/**************************************/
/******** début de la grammaire ********/
/**************************************/
void analyse() : {}
{
   <PROGRAMME><ident> { Make.begin_program(); }	
   bloc()
   <FPROGRAMME> { Make.end_program(); }
}


void bloc() : {}{
 (declConst())*
 (declVar())*	{ Make.how_fat_are_you(); }	
   suiteInstr()  // modifié
}

void declConst() : {}
{
  <CONST>  defConst() ( "," defConst())* ";"
}

void defConst() : {}
{
	
  <ident>  { Make.define_constant(); }
   "=" valConst() 
}

void valConst() : {}{
  <entier> 	{ Make.define_int(); }
 | <ident>	{ Make.define_ident(); }
 | <VRAI> 	{ Make.define_true(); }
 | <FAUX>   { Make.define_false(); }
}


void declVar() : {}
{
  <VAR> type()	
  <ident> { Make.create_var(); }
  (","
      <ident> { Make.create_var(); }
  )* ";"
}

void type() :{}
{
   <ENTIER> { Make.declare_var_int(); }
 | <BOOLEEN> { Make.declare_var_bool(); }
}
/*
 * Syntaxe des instructions.
 */
void suiteExpr() : {}
{ (expression() (";" (expression())? )*)? }

void suiteInstr() : {}
{ (instruction() (";" (instruction())? )*)? }

void instruction() : {}
{ affectation() | lecture() | ecriture() | iteration() }

void iteration() : {}
{ "TANTQUE" expression() "FAIRE" (instruction())* "FAIT" }

void affectation() : {}
{ <ident> {Declaration.setCurrentIdent(YakaTokenManager.identLu);} "=" expression() {Make.assignment();} }

void lecture() : {}
{ <LIRE> "(" <ident> ")" {Make.reading();}
}

void ecriture() :{}
{ <ECRIRE>( "(" ( expression() {Make.write_expression();} 
| <chaine> { Make.write_string(); } ) ")" ) 
| <ALALIGNE> {Make.aLaLigne();} }

/*
 * Expression
 */
void expression() : {}
{
  simpleExpr() 
  (opRel() 
  simpleExpr() {Make.whatRel();}
  )?
}

void simpleExpr() : {}
{
   terme() 
   (opAdd() 
   terme() {Make.whatAdd();}
   )*
} 
void terme() : {}
{
  facteur() 
  (opMul() 
  facteur()	{Make.whatMul();}
  )*
}
void facteur() : {}
{   primaire() 
  |  opNeg() primaire() {Make.whatNeg();}
}

void primaire (): {}
{
   valeur()
 | "(" expression() ")" 
 
}

void valeur () : {}
{ <entier> 	{ Make.value_int();}
 | <ident> 	{ Make.value_ident();}
 | <VRAI> 	{ Make.value_true();}
 | <FAUX> 	{ Make.value_false();}
}


void opRel() : {}
{
   "=" 		{expression.pushOp(Operator.EGAL);}
 | "<>" 	{expression.pushOp(Operator.DIFF);}
 | "<" 		{expression.pushOp(Operator.LOW_STRICT);}
 | "<=" 	{expression.pushOp(Operator.LOW_EGAL);}
 | ">" 		{expression.pushOp(Operator.UP_STRICT);}
 | ">=" 	{expression.pushOp(Operator.LOW_EGAL);}
} 

void opAdd() : {}
{
    "+"		{expression.pushOp(Operator.PLUS);}
  |  "-"  	{expression.pushOp(Operator.MINUS);}
  | <OU> 	{expression.pushOp(Operator.OR);}
}

void opMul() : {}
{
  "*"		{expression.pushOp(Operator.MULT);}
  | "/"		{expression.pushOp(Operator.DIV);}
  | <ET>	{expression.pushOp(Operator.AND);}
} 

void opNeg() : {}
{ "-" 		{expression.pushOp(Operator.OPP);}
 | <NON>	{expression.pushOp(Operator.NOT);}
}
